--- a/app/views/admin/admin/index.html.erb
+++ b/app/views/admin/admin/index.html.erb
@@ -36,4 +36,40 @@
         content_tag(:li, "There are no users. Invite others to join Kandan!", class: 'no-users') %>
     </ul>
   </div>
+  <div class="channels-list">
+    <h3>Channels</h3>
+    <table class="table">
+      <thead>
+        <tr>
+          <th>Channel</th>
+          <th>Participants</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @channels.each do |channel| %>
+          <tr>
+            <td><%= channel.name %></td>
+            <td>
+              <ul>
+                <% @all_users.each do |user| %>
+                  <li>
+                    <label>
+                      <% user_channel = "#{user.id},#{channel.id}" %>
+                      <%= check_box_tag "user_id_#{user.id}", user.id, user.allowed_channels.include?(channel.id.to_s), :class => "switch", :data => { :add => add_user_to_channel_path(:user_channel => user_channel) ,:remove => remove_user_from_channel_path(:user_channel => user_channel) } %> 
+                      <% if user.full_name.blank? %>
+                        <%= user.username %>
+                      <% else %>
+                        <%= "#{user.full_name} (#{user.username})" %>
+                      <% end %>
+                      <span></span>
+                    </label>
+                  </li>
+                <% end %>
+              </ul>
+            </td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
 </div>
