--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,4 @@
 <header class="header">
   <%= yield :header %>
-  <a href="/" class="logo"><%= image_tag "logo.png" %></a>
+  <a href="/" class="logo">NeuroChat</a>
 </header>
